--- a/src/components/StoryList/Story.css
+++ b/src/components/StoryList/Story.css
@@ -1,5 +1,5 @@
 .listItem{
     list-style: none;
-    margin: 0px;
+    margin: .5%;
     padding: 0px;
 }
